fixed db issues

--- a/templates/form.html
+++ b/templates/form.html
@@ -31,7 +31,7 @@
             {{form.customer_type(class="form-check", type="radio", style="list-style-type:none")}}
             <br />
             {{form.price.label}}
-            {{form.price(id="price", placeholder="Fill the price you want to buy/sell for?", class="form-control")}}
+            {{form.price(id="price", placeholder="Fill the price (in rupees) you want to buy/sell for?", class="form-control")}}
             <br />
             {{form.submit(class="btn btn-success button")}}
             <br />
